# cellos

./: .gitignore  CelloS.md  HANDOFF.md  PMTools.md  README.md  agentcatalog.example.json  agentcatalog.json.example  cellos.config.example.json  cellos.config.json.example  issues.md  prompt_library.json.example  promptprofiles.example.json  promptprofiles.json.example  pyproject.toml  smoketest.md  suggestions.md  toolprofiles.json.example  tools.json.example
.brv/: config.json
cellos/: __init__.py  _version.py  acp.py  acp_worker.py  agentcatalog.json.example  agents.py  cellos.config.json.example  cli.py  cli_app.py  cli_formatting.py  config.py  db.py  env.example  env.py  heartbeat.py  models.py  orchestrator.py  pm.py  prompt_builder.py  structured_response.py  task_actions.py  workers.py
cellos/connectors/: __init__.py  acpx.py  base.py  cellos_acp.py  fake_acp.py  opencode.py
cellos/domain/: __init__.py  attempts.py  attention.py  comments.py  conversation.py  enums.py  results.py  tasks.py  time.py  workers.py
cellos/integrations/: __init__.py  base.py  registry.py
cellos/persistence/: __init__.py  attempt_repository.py  comment_repository.py  event_repository.py  json_util.py  result_repository.py  schema.py  serialization.py  task_repository.py
docs/: README.md  acp-guide.md  acp.md  architecture.md  charter.md  communication.md  connector-extensibility-plan.md  connectors.md  critic.md  data-model.md  execution.md  heartbeat.md  implementation-plan.md  phase-plan.md  pm-adapters.md  pm-tools-research.md  product.md  project-charter.md  prompting.md  provider-implementation-plan.md  provider-roadmap.md  refactoring-spec.md  roles-and-lifecycle.md  smoke-test.md  strategy.md  taskWorkflow.md  tech.md  trello.md  vikunja-smoke-test.md
tests/: test_acp.py  test_acp_worker.py  test_agents.py  test_cli.py  test_config.py  test_db.py  test_example_provider.py  test_heartbeat.py  test_integration.py  test_integration_provider.py  test_models.py  test_orchestrator.py  test_persistence.py  test_pm.py  test_prompt_builder.py  test_scheduler.py  test_scheduler_service.py  test_services.py  test_structured_response.py  test_sync_service.py  test_task_actions.py  test_task_service.py  test_trello_client.py  test_trello_mapper.py  test_vikunja_provider.py  test_visibility.py  test_worker.py  test_worker_service.py
(+29 files in other folders)
