[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellos"
dynamic = ["version"]
description = "Human-governed AI orchestration system with deterministic task scheduling and agent routing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "click>=8.0",
    "rich",
    "cellos-acp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "setuptools-scm>=8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools_scm]
version_file = "cellos/_version.py"

[project.scripts]
cellos = "cellos.cli:main"
