[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellos"
version = "0.1.1"
description = "Human-governed AI orchestration system with deterministic task scheduling and agent routing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "click>=8.0",
    "rich",
]

[project.optional-dependencies]
provider-http = ["aiohttp>=3.9"]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses>=0.7",
    "aiohttp>=3.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.package-data]
cellos = ["*.example"]

[tool.setuptools.packages.find]
include = ["cellos*"]

[project.scripts]
cellos = "cellos.cli:main"
